Version 1.0.2 (?? ??? 2005)
 - Fixed bug 1296294: Javascript error when saving with empty description on IE
 - Fixed bug 1265575: Bug in get_all_dates()
 - Fixed bug: undefined variable warning in export_handler.php
 - Updated Polish translation
Version 1.0.1 (19 Aug 2005)
 - Fixed bug 1221434: Improved iCal import support for BYMONTHDAY in ics
 - Fixed bug 1261571: Overriding a conflict when name has double quotes
 - Fixed bug: use of & in report.php and view_entry.php
 - Fixed bug: include path problems for opening settings.php file
 - Fixed bug 1233798: Catagory settings for Boss/Assistant not working
 - Fixed security: exploit allows execution of code downloaded from
   remote server
 - Fixed bug 1245755: Unbalanced span tags
 - Fixed bug: URLs in month.php did not include '?'
 - Fixed bug 1211309: Notification message language incorrect
 - Fixed bug 1204229: "Untimed event" default broken since bug 1202127 fix
 - Fixed login looping related to register_long_arrays
 - Fixed bug 1218113: iCal ATTENDEE error if event is deleted
 - Fixed bug: category was lost wan clicking on prev/next month in month.php
 - Fixed bug 1212667: Install script - Database Type Problem
 - Fixed bug 1205680: upcoming.php was including unapproved.  will now use
   user preferences for displaying unapproved.
 - Patch 1171807: reminder sent late if cron run at exact second of reminder
 - Updated Danish translation
 - Updated Polish translation
 - Updated German translation
 - Updated French translation
 - Updated Norwegian translation
 - Updated Portuguese_BR translation
Version 1.0.0 (17 May 2005) aka "Buster"
 - Fixed bug 1202127: [ 1187734 ] Timezone offset problems still exist.
 - Fixed bug 1201821: Bypass user_sees_only_his_groups
 - Undo bug fix 1120897: Conflict with exceptions. This patch caused conflicts 
   on other days which turns out to be a more severe problem.
 - Fixed bug 1193835: Creator cannot "edit" a nonuser-event after Admin changes it.