@@ -181,10 +181,12 @@ $languages = array (
   "Polish" => "Polish",
   "Portuguese" =>"Portuguese",
   "Portuguese/Brazil" => "Portuguese_BR",
+  "Romanian" => "Romanian",
   "Russian" => "Russian",
   "Spanish" =>"Spanish",
   "Swedish" =>"Swedish",
-  "Turkish" =>"Turkish"
+  "Turkish" =>"Turkish",
+  "Welsh" =>"Welsh"
   // add new languages here!  (don't forget to add a comma at the end of
   // last line above.)
 );
@@ -271,6 +273,7 @@ $browser_languages = array (
 // translate("Spanish")
 // translate("Swedish")
 // translate("Turkish")
+// translate("Welsh")
 
 if ( $single_user != "Y" )
   $single_user_login = "";
