@@ -1,4 +1,6 @@
 Version 1.0.2 (?? ??? 2005)
+ - Added Romanian, Turkish, Welsh to config.php in places where they were
+   missing.
  - Fixed bug 1296294: Javascript error when saving with empty description on IE
  - Fixed bug 1265575: Bug in get_all_dates()
  - Fixed bug: undefined variable warning in export_handler.php
